console,oauth: Prevent wrapping of tab items

--- a/pkg/webui/components/tabs/tab/tab.styl
+++ b/pkg/webui/components/tabs/tab/tab.styl
@@ -13,10 +13,12 @@
 // limitations under the License.
 
 .tab
-  display: inline-block
+  display: flex
+  flex-direction: column
 
 .tab-item
-  display: inline-block
+  display: flex
+  white-space: nowrap
   padding: $cs.s $cs.l
   text-align: center
   position: relative
